2016-07-11 Albert Chu <chu11@llnl.gov>

	* Untabify all .c, .h, and .pl files for consistency across
	FreeIPMI.

2016-07-05 Holger Liebig <holger.liebig@ts.fujitsu.com>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Update
	Fujitsu Product ID range.

2016-06-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-oem-intel-spec.h: Add
	forgotten OEM macro.

2016-06-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Fix
	invalid completion code values for set session privilege macros.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	Clarify use of --debugfile option.

	* ipmiconsole/: Make --debugfile option available in production
	builds.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
	Remove buggy code which explains Master/Read write error from
	ChangeLog on 2015-09-09.

2016-05-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Add macro for maximum IANA numbers.
	
	* libfreeipmi/spec/generate-enterprise-numbers-file.sh:
	Automatically update iana .h file with max index.

2016-11-02 Albert Chu <chu11@llnl.gov>

	* Tagged freeipmi-1-5-5

2016-11-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/Makefile.am, etc/Makefile.am: Fix distcheck.

2016-10-26 Albert Chu <chu11@llnl.gov>

	* Support OEM sensors/sel events for SuperMicro H8SGL-F.

2016-10-26 Albert Chu <chu11@llnl.gov>
	
	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	SuperMicro H8SGL-F.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	* libipmiconsole/: Move "user_fd_retrieved" from connection struct
	to fds struct for clarity.
	
2016-10-07 Albert Chu <chu11@llnl.gov>

	Fix invalid clearing of ctx info in
	__ipmiconsole_ctx_connection_cleanup in
	libipmiconsole/ipmiconsole_ctx.c
